Randomly select loadout if not chosen